[package]
edition = "2021"
name = "scule"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
once_cell = "1.16.0"
regex = "1.7.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "thin"
